--- a/src/main/resources/application-local-sample.yml
+++ b/src/main/resources/application-local-sample.yml
@@ -7,6 +7,14 @@ spring:
     username: root
     password: password
 
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+
+  session:
+    store-type: redis
+
   jpa:
     show-sql: true
     hibernate:
