--- a/src/main/resources/application-local-sample.yml
+++ b/src/main/resources/application-local-sample.yml
@@ -7,14 +7,15 @@ spring:
     username: root
     password: password
 
-  data:
-    redis:
-      database: 0
-      host: localhost
-      port: 6379
-
-  session:
-    store-type: redis
+### Need when we work with sessions rather than JWT
+#  data:
+#    redis:
+#      database: 0
+#      host: localhost
+#      port: 6379
+#
+#  session:
+#    store-type: redis
 
   jpa:
     show-sql: true
